--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,5 +8,8 @@
 </head>
 <body>
   <h1>Home Page</h1>
+  <p>
+    It is well known that students are well known to be motivated by food.  Find out which  <a href="/students">foods</a> our students prefer.
+  </p>
 </body>
 </html>
